--- a/wel.html
+++ b/wel.html
@@ -59,7 +59,7 @@
     </div>
     <script>
         document.getElementById('startButton').addEventListener('click', function() {
-            window.location.href = 'photobooth.html'; // 跳转到拍照页面
+            window.location.href = '1.html'; // 跳转到拍照页面
         });
     </script>
 </body>
